force-app/main/default/objects/Meter_Reading__c/Meter_Reading__c.object-meta.xml
<CustomObject>
    <label>Meter Reading</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Meter Reading ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>