force-app/main/default/objects/Meter_Reading__c/fields/Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Days_Ago__c</fullName>
    <label>Days Ago</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>