force-app/main/default/objects/Meter_Reading__c/fields/Energy_Used__c.field-meta.xml
<CustomField>
    <fullName>Energy_Used__c</fullName>
    <label>Energy Used</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>