force-app/main/default/objects/Meter_Reading__c/fields/Last_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Reading__c</fullName>
    <label>Last Reading</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>