force-app/main/default/objects/Meter_Reading__c/fields/New_Reading__c.field-meta.xml
<CustomField>
    <fullName>New_Reading__c</fullName>
    <label>New Reading</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>