force-app/main/default/objects/Meter_Reading__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Meter Readings</relationshipLabel>
    <relationshipName>Meter_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>