force-app/main/default/objects/Meter_Reading__c/fields/Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Reading_Date__c</fullName>
    <formula>TODAY() - Days_Ago__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reading Date</label>
    <type>Date</type>
</CustomField>