force-app/main/default/objects/Meter_Reading__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Meter Readings</relationshipLabel>
    <relationshipName>Meter_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>