force-app/main/default/objects/Meter_Reading__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <formula>New_Reading__c -  Last_Reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>